--- a/app/templates/static_content/docs/index.html
+++ b/app/templates/static_content/docs/index.html
@@ -17,7 +17,7 @@
   <script src='docs/lib/backbone-min.js' type='text/javascript'></script>
   <script src='docs/lib/swagger.js' type='text/javascript'></script>
   <script src='docs/swagger-ui.js' type='text/javascript'></script>
-  <script src='docs/lib/highlight.7.3.pack.js' type='text/javascript'></script>
+  <!-- <script src='docs/lib/highlight.7.3.pack.js' type='text/javascript'></script> -->
 
   <!-- enabling this will enable oauth2 implicit scope support -->
   <script src='docs/lib/swagger-oauth.js' type='text/javascript'></script>
@@ -31,9 +31,9 @@
       onComplete: function(swaggerApi, swaggerUi){
         log("Loaded SwaggerUI");
 
-        $('pre code').each(function(i, e) {
-          hljs.highlightBlock(e)
-        });
+        // $('pre code').each(function(i, e) {
+        //   hljs.highlightBlock(e)
+        // });
       },
       onFailure: function(data) {
         log("Unable to Load SwaggerUI");
